# serdify

./: Cargo.toml  EXAMPLES.md  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE.md  README.md  debug_test.rs
.github/: FUNDING.yml
.kiro/specs/rfc7807-serde-json/: design.md  requirements.md  tasks.md
benches/: performance_benchmarks.rs
src/: debug_optional.rs  lib.rs  lib_clean.rs  lib_end.rs  main.rs
tests/: compatibility_tests.rs  integration_compatibility.rs
